--- a/01_introduction/introduction.tex
+++ b/01_introduction/introduction.tex
@@ -67,14 +67,8 @@ It is here in the story of alternate realities that this thesis enters. Taking o
 
 %=========================================================================================================
 
-\section{Document Overview}
-
-The remainder of this chapter outlines the primary contributions of this thesis. Chapter \ref{chapter-background} surveys existing taxonomies \& methods for classifying, categorising \& distinguishing between different alternate reality techniques, in order to frame the introduction of the parallel reality concept against existing techniques. Chapter \ref{chapter-vtw} describes the development of an initial tablet based parallel reality system while chapter \ref{chapter-mirrorshades} details the development of the Mirrorshades parallel reality platform. Chapters \ref{chapter-eval-1} \& \ref{chapter-eval-2} cover the evaluation of the Mirrorshades platform through user studies at a cultural heritage site, the former comparing parallel reality against more traditional manners in which virtual reality are used at such sites \& the latter investigating the benefits \& drawbacks to manners of parallel reality implementation, presenting a set of best practice recommendations. Finally \ref{chapter-conclusions} concludes the body of work \& postulates on future avenues of parallel reality investigation.
-
-%=========================================================================================================
-
 \section{Contributions}
-
+\label{intro-contributions}
 The contributions of this thesis can be summarized as follows;
 
 \begin{itemize}
@@ -85,6 +79,12 @@ The contributions of this thesis can be summarized as follows;
 	\item Evaluation of the Mirrorshades platform through user studies of a real world use case study within the realm of cultural heritage, including the application of an established presence questionnaire to parallel reality.
 	\item Discussion \& creation of a set of best practices for future parallel reality endeavours.
 \end{itemize}
+
+%=========================================================================================================
+
+\section{Document Overview}
+
+Chapter \ref{chapter-background} surveys existing taxonomies \& methods for classifying, categorising \& distinguishing between different alternate reality techniques, in order to frame the introduction of the parallel reality concept against existing techniques. Chapter \ref{chapter-vtw} describes the development of an initial tablet based parallel reality system while chapter \ref{chapter-mirrorshades} details the development of the Mirrorshades parallel reality platform. Chapters \ref{chapter-eval-1} \& \ref{chapter-eval-2} cover the evaluation of the Mirrorshades platform through user studies at a cultural heritage site, the former comparing parallel reality against more traditional manners in which virtual reality are used at such sites \& the latter investigating the benefits \& drawbacks to manners of parallel reality implementation, presenting a set of best practice recommendations. Finally \ref{chapter-conclusions} concludes the body of work \& postulates on future avenues of parallel reality investigation.
 
 %=========================================================================================================
 
