--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -729,6 +729,4 @@ Although less thoroughly investigated, the concept of creating an alternate real
 
 Previous cross reality research focussed on alleviating this vacancy problem by integrating sensor \& actuator infrastructure into the constituent real \& virtual environments of a system, such that actions \& events in one environment could manifest into the other. However directly visually engaging with both environments was not often possible in these systems \& only from predetermined, static locations.
 
-This thesis serves to extend alternate reality research by developing a system that allows its user to visually engage with both a real \& a virtual environment, transitioning between them at any point, whilst maintaining mobility to walk through the environments in tandem. In trading the sensor/actuator infrastructure of a cross reality system for direct visual engagement with both environments, the parallel reality concept is born.
-
-In the terms of Lifton's definition of the vacancy problem, this thesis aims to allow people to be in more than one place (reality) at a time.
+Parallel reality is introduced as a new category of alternate reality that allows its user to visually engage with both a real \& a virtual environment, transitioning between them at any point, whilst maintaining mobility to walk through the environments in tandem. In trading the sensor/actuator infrastructure of a cross reality system for direct visual engagement with both environments, the parallel reality concept further addresses the vacancy problem by providing \textit{``the means to be in more than one place (reality) at a time''}\cite{Lifton2007a}.
