--- a/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
+++ b/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
@@ -610,10 +610,6 @@ The user presses \& holds the \texttt{[A]} button on the controller to switch th
 
 %=========================================================================================================
 
-\pagebreak
-
-%=========================================================================================================
-
 \subsection{Transition with linear interpolation}
 \label{transition-with-linear-interpolation}
 The user presses \& holds the \texttt{[B]} button on the controller to switch the visual stimuli displayed by the DK1 from the default to VR. When the \texttt{[B]} button is released, the visual stimuli displayed by the HMD switch back from VR to the default. This switch fades between the default \& VR  visual stimuli using linear interpolation on the opacity of the game objects that the webcam feeds are rendered upon. Figure \ref{scenario12} illustrates this scenario while figure \ref{focus-locus-sensus-with-virtuality-continuum-with-transition}, discussed in the previous section, alludes to the user's experience of this transition upon the combined Milgram/Waterworth model (assuming a default environment that is wholly RW).
@@ -762,17 +758,8 @@ Testing then took place with members of the Open Virtual Worlds research group\f
 %=========================================================================================================
 
 \section{Summary}
-\begin{itemize}
-	\item Learned from VTW, needed more accurate positioning \& more immersive display tech
-	\item Moving to indoor \& HMD solves both, whilst also allowing the PR investigation to cover a different deployment scenario
-	\item Sallies chapel is a perfect case study
-	\item VR is hot right now, after disappointment in the 90's, thanks to Oculus, we used a DK1
-	\item All sorts of stereoscopic vision stuff, built \& calibrated see through solution
-	\item Did latency measures, has constraints
-	\item Unlike outdoors where GPS rules, indoors is fragmented with lots of solutions, IndoorAtlas is great for MShades
-	\item Putting together Android/IndoorAtlas, to Unity, via PHP/MySQL, with Xbox controller
-	\item Informed design/implementation of transitions, using combined Milgram/Waterworth model for justification
-	\item Complete system tested in department, then in Sallies, then in Sallies with research group, informed some decisions about the user studies
-\end{itemize}
+This chapter has covered the development of the hardware \& software that together comprise Mirrorshades parallel reality platform. Builds upon the lessons of the previous VTW platform, Mirrorshades permits parallel reality experiences with greater positional accuracy \& substantially improved virtual immersion. The platform combines an Oculus Rift DK1 with a stereo video see-through solution \& the IndoorAtlas indoor positioning system. Several different styles of performing transitions between real \& virtual stimuli have been implemented \& their predicted effects represented using the combined Milgram/Waterworth model.
+
+Initial testing of the platform was conducted with members of the OVW research group, first within a department building \& then within St Salvator's chapel, which is introduced as an ideal real world location for a case study into the use of Mirrorshades within the field of virtual heritage. Latency measurements were performed \& while not ideal, latency of real world visuals did not arise as a substantial detractor to the enjoyment or utility of the platform during these initial trials.
 
 %=========================================================================================================
