--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -1398,6 +1398,13 @@ Stage 2.2 further investigated the concept of presentation of VR visual stimuli 
 
 \section{Best Practices for PR}
 
-\textbf{***Do this here, rather than in final chapter.}
+\section{PR Best Practices}
+
+\begin{itemize}
+	\item A 100\% RW view \& a 100\% VR view should be provided
+	\item A method of transitioning between the two views at a user-controlled speed, with the ability to pause at any inbetween balance, should be provided
+	\item A default view with \textless than 100\% RW should be provided, but should be toggleable \& not enforced
+	\item This \textless 100\% should not be too much \textless 100\% because going too far hampers the overall experience
+\end{itemize}
 
 %=========================================================================================================
