--- a/07_conclusions/conclusions.tex
+++ b/07_conclusions/conclusions.tex
@@ -11,24 +11,6 @@
 
 Introduction goes here.
 
-%=========================================================================================================
-
-Contributions (as laid out in intro, but elaborate? or maybe have them in their entirety in both places)
-
-%=========================================================================================================
-
-Future work
-
-%=========================================================================================================
-
-Final Thoughts
-
-final quote?
-
-%=========================================================================================================
-
-
-
 \begin{figure}[h]
 	\begin{center}
 		\includegraphics[width=\textwidth]{participant-f-4.jpg}
@@ -37,45 +19,31 @@ final quote?
 	\end{center}	
 \end{figure}
 
-
-
-
-
-
-
-
-
 %=========================================================================================================
 
-\section{Summary}
+\section{Contributions}
 
-
-\begin{itemize}
-	\item 
-	\item 
-	\item 
-	\item 
-	\item 
-	\item 
-	\item 
-	\item 
-	\item 
-	\item 
-\end{itemize}
-
-
-\section{PR Best Practices}
+As listed in section \ref{intro-contributions} the contributions of this thesis can be summarized as follows;
 
 \begin{itemize}
-	\item A 100\% RW view \& a 100\% VR view should be provided
-	\item A method of transitioning between the two views at a user-controlled speed, with the ability to pause at any inbetween balance, should be provided
-	\item A default view with \textless than 100\% RW should be provided, but should be toggleable \& not enforced
-	\item This \textless 100\% should not be too much \textless 100\% because going too far hampers the overall experience
+	\item The introduction of parallel reality as a new category of alternate reality that allows users to experience two complete environments in tandem \& represents an approach for mitigation of the vacancy problem.
+	\item The framing of parallel reality through a thorough investigation \& extension of previous taxonomies that classify \& distinguish alternate reality terminologies.
+	\item The creation of the combined Milgram/Waterworth model for visualising alternate reality experiences, including those of parallel reality systems.
+	\item Development of a parallel reality platform, dubbed Mirrorshades, that combines new virtual reality hardware with novel indoor positioning technology.
+	\item Evaluation of the Mirrorshades platform through user studies of a real world use case study within the realm of cultural heritage, including the application of an established presence questionnaire to parallel reality.
+	\item Discussion \& creation of a set of best practices for future parallel reality endeavours.
 \end{itemize}
 
-
-
+%=========================================================================================================
 
 \section{Future Work}
 
 Gear VR style hardware
+
+%=========================================================================================================
+
+\section{Final Thoughts}
+
+Final quote?
+
+%=========================================================================================================
