--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -1386,25 +1386,18 @@ However it is worth considering that while a default view that presents \textles
 
 %=========================================================================================================
 
-\section{Summary}
-
-These evaluations have experimentally shown the value of the Mirrorshades platform (\& PR in general) as a new modality for on-site comparison of real \& virtual environments within the context of a cultural heritage site, as well as revealing a number of indicators toward best practices for future implementation of PR systems.
-
-With the merit of the platform established by the stage 1 evaluation, this second stage of evaluation explored different implementation details of the platform to inform future implementation of similar systems such that the benefits of the concept can be best exploited. Stage 2.1 assessed participant responses to several different styles of performing transitions between the constituent RW \& VR environments, with a transition which furnished participants with complete control over the percentage of the visual stimuli of each environment that were presented to them emerging the clear favourite. The introduction of automatic transitions from RW to VR was met negatively when assessed in terms of enjoyment \& preference, but positively when assessed in terms of awareness \& understanding of the relationships between the two environments.
-
-Stage 2.2 further investigated the concept of presentation of VR visual stimuli to the user without their conscious invocation of a transition, the intention being to raise awareness \& understanding between the environments without introducing the negativity of the automatic transition, by replacing the 100\% RW default view of earlier stages with ones that presented a percentage of each environment at all times. The more extreme case of a 50/50 split led to the greater increase in spatial presence within the VR environment \& a barely perceptible decrease in experienced realism of the RW environment, however the 75/25 split that led to a less remarkable change was preferred by the participants.
-
-%=========================================================================================================
-
 \section{Best Practices for PR}
 
-\section{PR Best Practices}
+These evaluations have experimentally shown the value of the Mirrorshades platform \& thus PR in general as a new modality for on-site comparison of real \& virtual environments within the context of a cultural heritage site, as well as revealing a number of indicators toward best practices for future implementation of PR systems.
 
-\begin{itemize}
-	\item A 100\% RW view \& a 100\% VR view should be provided
-	\item A method of transitioning between the two views at a user-controlled speed, with the ability to pause at any inbetween balance, should be provided
-	\item A default view with \textless than 100\% RW should be provided, but should be toggleable \& not enforced
-	\item This \textless 100\% should not be too much \textless 100\% because going too far hampers the overall experience
-\end{itemize}
+With the merit of the platform compared to a traditional VR experience established by the stage 1 evaluation, the second stage of evaluation explored different implementation details of the platform to inform future implementation of similar systems such that the benefits of the concept can be best exploited. Stage 2.1 assessed participant responses to several different styles of performing transitions between the constituent RW \& VR environments, with a transition which furnished participants with complete control over the percentage of the visual stimuli of each environment that were presented to them emerging the clear favourite. The introduction of automatic transitions from RW to VR was met negatively when assessed in terms of enjoyment \& preference, but positively when assessed in terms of awareness \& understanding of the relationships between the two environments.
+
+Stage 2.2 further investigated the concept of presentation of VR visual stimuli to the user without their conscious invocation of a transition, the intention being to raise awareness \& understanding between the environments without introducing the negativity of the automatic transition, by replacing the 100\% RW default view of earlier stages with ones that presented a percentage of each environment at all times. The more extreme case of a 50/50 split led to the greater increase in spatial presence within the VR environment \& a barely perceptible decrease in experienced realism of the RW environment, however the 75/25 split that led to a less remarkable change was preferred by the participants. Considering these findings, several best practices for future PR implementations can be proposed.
+
+\begin{enumerate}
+	\item Both a 100\% RW \& a 100\% VR view should be provided, though these do not have to be the default RW/VR positions. A 100\% VR view is diagnostic for situations in which the user wishes to perform deliberate in depth observations of a VR object, while a 100\% RW view is important both for performing the same observations of RW objects but also such that movement in the RW environment can be made as comfortable as possible for the user. Whilst improvements to HMDs \& associated video see-through technologies, along with improvements to the accuracy of indoor positioning systems, will undoubtedly mitigate the detrimental effects of walking while using a HMD based PR system such as Mirrorshades, the ability to revert to a 100\% RW view will ensure that the experience of walking in such a situation is presented at its most agreeable.
+	\item A view that provides less than 100\% RW without the need to keep a control activated should be provided. Presenting VR visuals in this manner, such that the user receives VR stimuli even without consciously thinking to perform a transition to VR, has shown to have a positive effect upon participant awareness of the VR content \& the relationship between this content \& the RW environment. The balance between RW \& VR visuals in such a view needs to be carefully considered, as although reducing RW visuals more in the evaluations led to heightened awareness \& understanding of the relationship between the environments, it was the less drastically reduced RW view that was preferred overall.
+	\item A method of transitioning between default RW \& VR positions that allows the user to both control the speed of the transition \& to stop at any intermediary level between 100\%RW/0\%VR \& 0\%RW/100\%VR should be provided. This style of transition was clearly the best received throughout the evaluations \& participants frequently used this transition to pause at intermediary opacities.
+\end{enumerate}
 
 %=========================================================================================================
