--- a/07_conclusions/conclusions.tex
+++ b/07_conclusions/conclusions.tex
@@ -9,7 +9,9 @@
 
 \label{chapter-conclusions}
 
-Introduction goes here.
+Alternate realities have fascinated mankind since early prehistory \& with the advent of the computer \& the smartphone we have seen the rise of many different categories of alternate reality that replace, augment, diminish \& mix with our familiar real world to expand our capabilities, our understanding \& our entertainment.
+
+This thesis has introduced parallel reality as a new category of alternate reality that comprises two environments, one real \& the other virtual, each complete unto itself \& wherein the user may freely switch between them. The benefits that such a system imparts upon the user by granting them the ability to explore parallel real \& virtual environments in tandem has been shown by developing a parallel reality platform, Mirrorshades, and applying it to a use case within the realm of cultural heritage, with evaluation of these studies leading to a number of best practices for future parallel reality endeavours.
 
 \begin{figure}[h]
 	\begin{center}
@@ -38,7 +40,16 @@ As listed in section \ref{intro-contributions} the contributions of this thesis 
 
 \section{Future Work}
 
-Gear VR style hardware
+Parallel reality has been presented in this thesis as a new category of alternate reality with the Mirrorshades platform representing the first involved effort at assembling a system within this new categorisation.
+
+%Hardware
+Regarding the hardware of the Mirrorshades platform gives rise to an obvious avenue for improvement. Rather than encumbering a user with a bulky, heavy satchel containing a laptop computer, battery pack \& myriad wires, \& occupying both of their hands with a smartphone \& controller, a hardware platform such as Samsung's Gear VR, which unfortunately did not exist in time for inclusion in this thesis, would have a drastic effect upon the comfort of the system \& the ability to quickly \& easily deploy it in less pre-rehearsed experimental settings.
+
+%Domain/Evaluation
+Evaluation of this platform was centred upon an application within the domain of cultural heritage, however parallel reality as a concept can surely be applied to many other areas to great benefit, both serious \& not so serious.
+
+%Vacancy/PoSR
+PoSR
 
 %=========================================================================================================
 
